force-app/main/default/objects/ConnectPurchasingInvoiceCash__c/ConnectPurchasingInvoiceCash__c.object-meta.xml
<CustomObject>
    <label>購買発注明細＋現金入出</label>
    <nameField>
        <displayFormat>PC-{000000}</displayFormat>
        <label>CONNECT PURCHASING INVOICE AND CASH Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>