force-app/main/default/objects/ConnectPurchasingInvoiceCash__c/fields/Cashbook__c.field-meta.xml
<CustomField>
    <fullName>Cashbook__c</fullName>
    <label>CASH BOOK</label>
    <referenceTo>CASH_BOOK__c</referenceTo>
    <relationshipName>CONNECT_PURCHASING_INVOICE_AND_CASH</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>