force-app/main/default/objects/ConnectPurchasingInvoiceCash__c/fields/PayableRollupStatus__c.field-meta.xml
<CustomField>
    <fullName>PayableRollupStatus__c</fullName>
    <label>PAYABLE ROLLUP STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RECEIVABLE_PAYABLE_ROLLUP_STATUS</valueSetName>
    </valueSet>
</CustomField>