force-app/main/default/objects/ConnectPurchasingInvoiceCash__c/fields/PurchasingInvoice__c.field-meta.xml
<CustomField>
    <fullName>PurchasingInvoice__c</fullName>
    <label>PURCHASING INVOICE</label>
    <referenceTo>PurchasingInvoice__c</referenceTo>
    <relationshipName>CONNECT_PURCHASING_INVOICE_AND_CASH</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>