force-app/main/default/objects/ConnectPurchasingInvoiceCash__c/fields/UnpaidBalancePIUSDForCash__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalancePIUSDForCash__c</fullName>
    <label>UNPAID BALANCE P/I(USD)-FOR CASH</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>