force-app/main/default/objects/ConnectPurchasingInvoiceCash__c/fields/UnpaidBalancePurchasingLocal__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalancePurchasingLocal__c</fullName>
    <formula>PurchasingInvoice__r.UnpaidBalanceLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UNPAID BALANCE OF PURCHASING(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>