force-app/main/default/objects/ConnectPurchasingInvoiceCash__c/fields/UnpaidBalancePurchasingUSD__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalancePurchasingUSD__c</fullName>
    <formula>PurchasingInvoice__r.UnpaidBalance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UNPAID BALANCE OF PURCHASING(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>